styles/arisjs.less
// Bootstrap source
@import "background-variant";
@import "variables";

@import "xray-debug";

/* Global */

body {
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
}

/* Cursor for anchors with no hrefs */

a {
  cursor:pointer;
}

.clear {
	clear: both;
}


/* Left Organizer */

.organizer-section-header {
	color: @gray-light;
}
.table-hover td {
	padding-left: 1em !important;
}

.table-hover > tbody > tr:hover {
  background-color: @navbar-default-toggle-hover-bg !important;
}

.table-hover .active td {
	/*background: #d8d8d8 !important;*/
}

.scene-trigger, .scene-title, .game_objects .edit, table td {
	cursor: pointer;
}

table th {
 cursor: default;
}

table.organizer {
	thead {
		th {
			position: relative;
			padding-right: 1.75em;
		}
	}
	.new {
		position: absolute;
		top: 0;
		right: 0;
		padding: 0.5em;
	}
}


/* Long unbreakable names */

.media-organizer {
	overflow-x: hidden;
}


/* Navbar */
.aris-nav li {
	text-align: center;
}
.nav-name-wrapper {
	display: inline-block;
}
@media (max-width: 767px) {
	.aris-nav li {
		text-align: left !important;
	}
}

@media (min-width: 768px) and (max-width: 880px) {
	.nav-name {
		display: none !important;
	}
}
@media (min-width: 881px) and (max-width: 960px) {
	.nav-name {
		font-size: 80%;
	}
	.nav-name-wrapper {
		display: block;
	}
	body {
		padding-top: 70px !important;
	}
}
@media (min-width: 961px) and (max-width: 1100px) {
	.nav-name-wrapper {
		display: block;
	}
	body {
		padding-top: 70px !important;
	}
}


/* Active bootstrap list item as a button */

a.list-group-item.active:hover {
  background-color: darken(@list-group-active-bg, 8%);
  border-color: darken(@list-group-active-bg, 17%);
}

.nowrap {
	white-space: nowrap;
}

.absolute {
	/* Disabled for demo */
	/* position: absolute; */
	margin-top: 0;
	margin-left: 0;
	height: 100%;
	width: 100%;
}

.aris-logo {
	img {
		height: 40px;
		margin: 5px 10px;
	}
}


/* Full height editing */

html, body, .full-height {
	height: 100%;
	overflow: hidden;
}

body {
	padding-top: 50px;
	background:  darken(@body-bg, 3.5%);
}


/* Scene editor */

#main .scenes {
	.absolute;
	z-index: 2;
	overflow: hidden;
}

#main .scenes .scenes-inner {
	.absolute;
	position: absolute;
	overflow: visible;
	width: 4000px;
	height: 4000px;
}

#main .scenes .scenes-links {
	.absolute;
	position: absolute;
	z-index: 9999;
	pointer-events: none;
	overflow: visible;
	display: none;
}

#main .scenes .scenes-link {
	stroke: rgb(101,184,34);
	stroke-width: 3px;
	stroke-linecap: round;
}

/* Remove bootstraps gutter */

#info, #list {
  padding-right: 15px;
  padding-left: 15px;
  overflow: auto;
}

/* Shadows */

nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail {
	box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

/* Shaded Backgrounds */

#main .scenes, .media-editor, .conversation-editor {
	background: rgba(175, 175, 175, 0.5);
	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2);
}

#main .scenes {
	background: rgb(160, 160, 160);
	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2);
}

#main .scenes-inner {
	background: rgb(211, 211, 211);
}

.scene-panel.panel-default:hover {
	.panel-heading {
		background: darken(@panel-default-heading-bg, 5%) !important;
	}
}

.scene-panel.panel-info:hover {
	.panel-heading {
		background: darken(@panel-info-heading-bg, 5%) !important;
	}
	border-color: darken(@panel-info-border, 5%) !important;
}

.scenes-overlay {
	.absolute;
	z-index: 20;

	pointer-events: none;
}

.scene-panel.panel-default {
	.scene-title {
		color: @gray-light;

		.intro_icon {
			top: 3px; // Center it
		}
	}
}

.scene-panel {
	max-width: 100%;
	margin: 0.5em;

	.panel-body {
		color: @gray;
	}

	.scene-title {
		white-space: nowrap;
		overflow: hidden;
		font-size: 125%;
		margin-right: 1em;
	}


	.new-trigger {
		position: absolute;
		right: 0;
		top: 0px;
		margin: 0.5em;
		padding: 0.5em;
	}
}

.scene-triggers {
	margin-bottom: 0;

	.scene-trigger {
		position: relative;

		height: 55px;
		width: 75px;
		overflow: hidden;
		text-align: center;
		white-space: nowrap;
		padding-top: 5px;

		.trigger-label {
			overflow: hidden;
		}
	}

	.scene-trigger:hover {
		color: @brand-primary;
		//background: @gray-lighter;
		//border-radius: @border-radius-base;
	}
}

.new-scene-button {
	position: absolute;
	top: 20px;
	right: 20px;
	z-index: 10000;
}

.view-links {
	position: absolute;
	top: 20px;
	right: 140px;
	z-index: 10000;
}

.view-links-checkbox {
	pointer-events: none;
}

.empty_scene {
	padding: 0 0.5em;
	text-align: center;
}


/* Side editor */

/* Hidden ID on editor heading */
.object-id {
	visibility: hidden;
}
h5:hover .object-id, h4:hover .object-id {
	visibility: visible;
}


/* Padded hover checks */

.checkbox {
	padding: 0;
	border-radius: @border-radius-base;
	background: #eee;

	label {
		padding: 0.5em;
		width: 100%;
		vertical-align: middle;
	}

	input {
		display: none;
	}
}

.checkbox input + label:before {
	display: inline-block;
	position: relative;
	top: 1px;
	padding: 0.25em;
	margin-right: 0.25em;

	color: #fff;
	background: #fff;

	border: 1px solid @input-border;
	border-radius: @border-radius-base;

	font-family: 'Glyphicons Halflings';
	line-height: 1;

	content: "\e013";

	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.checkbox input:checked + label:before {
	color: #fff;
	background: @brand-info;
	border-color: darken(@brand-info, 17%);
}

.checkbox:hover {
	background: #ddd;
}

/* Hide radio inputs */

.trigger-types input, .item-types input, .trigger-trigger_on_enter input, .factory-trigger_on_enter input, .published-toggle input {
	display: none;
}


/* QR code fit to side editor */

.qr_image img, .qr_image_locked img, .log_out_qr_image img {
	padding-top: 1em;
	width: 100%;
}

.qr_instructions {
	text-align: center;
	margin-top: 20px;
}

.locked_codes {
	background-color: #ddd;
}
/* ... */

